--- a/HotelWebUI/Components/Layout/NavMenu.razor
+++ b/HotelWebUI/Components/Layout/NavMenu.razor
@@ -29,7 +29,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Rooms">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Rooms
             </NavLink>
         </div>
     </nav>
